tests/ft/generics/invalid_typechecking.jk
func multi_generics[T, U](a: T, b: U, c: int) -> T {
	a
}

type At;
type Bt;
multi_generics[At, Bt](At, Bt); // error: missing argument

@dump();
